--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         autoplay
         loop
         muted
-        poster="path/to/poster-image.jpg"
+        poster="./images/poster(1).png"
       ></video>
     </body>
   </html>
