--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Идеальное видео и оформление страницы для вашего проекта. Подходит для привлечения внимания и создания красивого дизайна.">
     <meta name="keywords" content="идеально, видео, проект, веб-дизайн, оформление">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
 </head>
 <body>
       <h1 class="title">НАДО СДЕЛАТЬ ИДЕАЛЬНО</h1>
